--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-blog",
+  "name": "dev-blogs-v2",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,20 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.11.13",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.9",
-    "eslint": "8.29.0",
-    "eslint-config-next": "13.0.6",
+    "@tailwindcss/typography": "^0.5.8",
+    "@tiptap/extension-image": "^2.0.0-beta.207",
+    "@tiptap/extension-link": "^2.0.0-beta.207",
+    "@tiptap/extension-placeholder": "^2.0.0-beta.207",
+    "@tiptap/extension-underline": "^2.0.0-beta.207",
+    "@tiptap/extension-youtube": "^2.0.0-beta.207",
+    "@tiptap/react": "^2.0.0-beta.207",
+    "@tiptap/starter-kit": "^2.0.0-beta.207",
+    "@types/formidable": "^2.0.5",
+    "axios": "^1.2.1",
+    "classnames": "^2.3.2",
+    "cloudinary": "^1.32.0",
+    "formidable": "^2.1.1",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
-    "typescript": "4.9.4"
+    "slugify": "^1.6.5"
   },
   "devDependencies": {
+    "@types/node": "18.11.15",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.9",
     "autoprefixer": "^10.4.13",
+    "eslint": "8.29.0",
+    "eslint-config-next": "13.0.6",
     "postcss": "^8.4.20",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "typescript": "4.9.4"
   }
 }
